--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.1",
         "ext-mongodb": "^1.15.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.0",
+        "jenssegers/mongodb": "^3.9",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "linecorp/line-bot-sdk": "^7.6"
@@ -19,8 +20,8 @@
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.0",
-        "spatie/laravel-ignition": "^2.0"
+        "phpunit/phpunit": "^9.0",
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
